# hyper

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  plan.md  progress.md  pyproject.toml  todo.md  tsconfig.json
examples/: hello.json  write-file.json
src/: cli.rs  deepseek.rs  engine.rs  index.ts  lib.rs  main.rs  model.rs  workspace.rs
src/agent/: adapters.ts  loop.ts  session.ts
src/cli/: index.ts
src/hyper/: __init__.py  cli.py  harness.py
src/policy/: engine.ts
src/schemas/: event.ts  failure.ts  task.ts
src/tools/: bash.ts  edit.ts  read.ts  search.ts  types.ts  write.ts
src/tui/: index.ts  mod.rs  ui.rs
src/workspace/: checkpoints.ts  events.ts  paths.ts  sqlite.ts  workspace.ts
tests/: run.rs  run.test.ts  task.rs  task.test.ts  test_harness.py
