[package]
name = "harness"
version = "0.1.0"
edition = "2024"
description = "Terminal-first agent harness for local coding workflows"
license = "MIT"

[[bin]]
name = "hyper"
path = "src/main.rs"

[[bin]]
name = "hy"
path = "src/bin/hy.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
diffy = "0.4"
dirs = "6"
rand = "0.9"
ratatui = "0.30"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rpassword = "7"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-width = "0.2"
tui-markdown = { version = "0.3", default-features = false }
wait-timeout = "0.2"

[dev-dependencies]
tempfile = "3"
