[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "hyper-agent-harness"
version = "0.1.0"
description = "A small harness for repeatable agent workflows"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Mark Chen", email = "mark.chen.im@gmail.com" }
]
keywords = ["agent", "harness", "workflow", "automation"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.scripts]
hyper = "hyper.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
